Start to reorganize with partitioned datasets to be able to handle multiple ships files.

--- a/notebooks/02.2_clean_trip_statistics.ipynb
+++ b/notebooks/02.2_clean_trip_statistics.ipynb
@@ -141,16 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86871f6b-0a88-43aa-af51-ab028edb2f8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_stat.isnull()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9493ba73",
    "metadata": {
     "papermill": {
@@ -234,7 +224,7 @@
     "df_compare['item'] = 'raw'\n",
     "\n",
     "df_clean['item'] = 'clean'\n",
-    "df_compare = df_compare.append(df_clean)"
+    "df_compare = df_compare.append(df_clean, ignore_index=True)"
    ]
   },
   {
@@ -279,6 +269,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7b96e3e1-f445-4d61-bf10-d88a0522fabd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f6a05f3-d434-4761-8450-5c6000f40bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f11a60-5ff9-4a6a-a01b-197481ebe4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167b556e-62a5-4c80-8743-d19caa89774a",
    "metadata": {},
    "outputs": [],
    "source": []
