The whole pipeline now works with partitioned datasets (where each ship can have a partition).

--- a/notebooks/03.1_explore_trip_statistics.ipynb
+++ b/notebooks/03.1_explore_trip_statistics.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "df_stat = catalog.load('trip_statistics_clean')\n",
+    "loaded = catalog.load('trip_statistics_clean')\n",
+    "df_stat = loaded['tycho-brahe-wind-2021-04-10--2021-06-30.csv']()\n",
     "df_stat.head()"
    ]
   },
