Compared the two ships.

--- a/notebooks/explore_trip_statistics/03.1_explore_trip_statistics.ipynb
+++ b/notebooks/explore_trip_statistics/03.1_explore_trip_statistics.ipynb
@@ -140,6 +140,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81a28bf5-bd88-48db-8137-9cfc405ecf0c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe91e633-4dbc-4936-818e-31f14ed48019",
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "partition_id = 'aurora-wind-2021-04-10--2021-06-30.csv'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4af21de",
@@ -156,7 +180,7 @@
    "outputs": [],
    "source": [
     "loaded = catalog.load('trip_statistics_clean')\n",
-    "df_stat = loaded['tycho-brahe-wind-2021-04-10--2021-06-30.csv']()\n",
+    "df_stat = loaded[partition_id]()\n",
     "df_stat.head()"
    ]
   },
@@ -534,7 +558,7 @@
     "\n",
     "P_fwd_ratio = (df2['P1']/df2['P2'])\n",
     "P_aft_ratio = (df2['P3']/df2['P4'])\n",
-    "max_ratio_diff = 0.1\n",
+    "max_ratio_diff = 0.3\n",
     "mask = (P_fwd_ratio.between((1-max_ratio_diff), (1+max_ratio_diff)) &\n",
     "        P_aft_ratio.between((1-max_ratio_diff), (1+max_ratio_diff)))\n",
     "df2 = df2.loc[mask].copy() \n",
@@ -595,24 +619,24 @@
    "source": [
     "df_selection = df2.select_dtypes(exclude='object').copy()\n",
     "\n",
-    "selection = list(df_selection.columns)\n",
-    "selection.remove('P_fwd')\n",
-    "selection.remove('P_aft')\n",
-    "selection.remove('sin_pm_aft')\n",
-    "selection.remove('cos_pm_aft')\n",
-    "selection.remove('sin_pm_fwd')\n",
-    "selection.remove('cos_pm_fwd')\n",
-    "selection.remove('reversing')\n",
-    "selection.remove('E')\n",
-    "selection.remove('E1')\n",
-    "selection.remove('E2')\n",
-    "selection.remove('E3')\n",
-    "selection.remove('E4')\n",
+    "selection = list()\n",
+    "removes = [\n",
+    "'P_fwd',\n",
+    "'P_aft',\n",
+    "'sin_pm_aft',\n",
+    "'cos_pm_aft',\n",
+    "'sin_pm_fwd',\n",
+    "'cos_pm_fwd',\n",
+    "'E',\n",
+    "'E1',\n",
+    "'E2',\n",
+    "'E3',\n",
+    "'E4',\n",
+    "'trip_time',  # Very correlated with sog\n",
+    "'Effekt Propulsion Total (kW)',\n",
+    "]\n",
     "\n",
-    "#selection.remove('start_time')\n",
-    "selection.remove('trip_time')  # Very correlated with sog\n",
-    "#selection.remove('aw')\n",
-    "selection.remove('Effekt Propulsion Total (kW)')\n",
+    "selection = list(set(df_selection.columns) - set(removes))\n",
     "\n",
     "df_selection = df_selection[selection].copy()\n",
     "\n",
@@ -739,17 +763,6 @@
     "    sog = np.linspace(X.index.min(), X.index.max(), 100)\n",
     "    y_pred = results.predict(X)\n",
     "    prstd, iv_l, iv_u = wls_prediction_std(results, exog=X, alpha=0.05)\n",
-    "    \n",
-    "    #data = pd.DataFrame(index=X.index)\n",
-    "    #data['sog'] = X.index\n",
-    "    #data['P'] = y \n",
-    "    \n",
-    "    #grid = sns.relplot(x=\"sog\", y=\"P\", data=data);\n",
-    "    \n",
-    "    #grid.ax.plot(X.index, y_pred, 'r')\n",
-    "    \n",
-    "    #grid.ax.plot(X.index, iv_l, 'k--')\n",
-    "    #grid.ax.plot(X.index, iv_u, 'k--')\n",
     "    \n",
     "    fig,ax=plt.subplots()\n",
     "    ax.plot(y, y_pred, '.')\n",
@@ -897,67 +910,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ec9e22-56f9-42ad-8255-4fbb3ff90c30",
+   "id": "00af7959-a697-418f-8906-b3f493442afe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "np.sum((y-y_mean)**2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81292fa-d908-48be-b0ed-997dff1ad535",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.var(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f932d612-d650-4f57-b350-8da11f0bd5ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.std(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19c245fa-cc04-435b-984b-faa10455e7e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sqrt(np.sum((y-y_mean)**2)/len(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f0cd99f-5264-4410-927f-b37f75652954",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.std(y)**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36e4443e-9656-4de0-b039-d32a8b965a5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.var(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3ece3b8-b353-4a66-a14e-2475071355e5",
+   "id": "00f7cc75-3f35-41e0-bba5-88dc6f0f4968",
    "metadata": {},
    "outputs": [],
    "source": []
