Compared the ships and found that wind has some influence.

--- a/notebooks/03.01_compare_ships.ipynb
+++ b/notebooks/03.01_compare_ships.ipynb
@@ -63,7 +63,8 @@
     "import statsmodels.api as sm\n",
     "\n",
     "from d2e2f.visualization import visualize\n",
-    "import re"
+    "import re\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
@@ -288,7 +289,135 @@
    "id": "f20d5881-e5a7-4a59-a3d1-72f9e92bf9a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def select_features(df):\n",
+    "    \n",
+    "    data = df[['P','sog']].copy()\n",
+    "    data.sort_values(by='sog', inplace=True)\n",
+    "    data.set_index('sog', inplace=True)\n",
+    "    y = data.pop('P')\n",
+    "    X = data\n",
+    "    X['sog**3'] = X.index**3\n",
+    "    \n",
+    "    return y,X\n",
+    "\n",
+    "def fit_sog3(df):\n",
+    "    \n",
+    "    y,X = select_features(df)\n",
+    "    model = sm.OLS(y,X)\n",
+    "    results = model.fit()\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57301035-20cd-4ddf-92e4-180bb4aceb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ships = df_cut.groupby(by='ship', sort=False)\n",
+    "P_pred = pd.Series(dtype=float)\n",
+    "for ship_name, ship in ships:\n",
+    "    model = models[ship_name]\n",
+    "    \n",
+    "    P_pred = P_pred.append(model.predict(ship[['sog']]**3))\n",
+    "\n",
+    "df_cut['P_pred'] = P_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a469498-87d7-46e0-9c33-097dc8efcbc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = ships.apply(fit_sog3)\n",
+    "models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d63b89-a448-43d7-84d9-f82aa09fe83d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(df_cut, x='sog',y='P', color='ship', width=1000, height=600, \n",
+    "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], opacity=0.2)\n",
+    "\n",
+    "for ship_name, model in models.items():\n",
+    "    \n",
+    "    sog = np.linspace(df_cut['sog'].min(), df_cut['sog'].max(), 100)\n",
+    "    df_ = pd.DataFrame()\n",
+    "    df_['sog**3'] = sog**3\n",
+    "    P_pred = model.predict(df_)\n",
+    "    \n",
+    "    line = go.Scatter(x=sog, y=P_pred, name=ship_name)\n",
+    "\n",
+    "    fig.add_trace(line)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845974f2-08b8-4f37-996f-77ad77570749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cut['P_rest'] = df_cut['P'] - df_cut['P_pred']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa8be79c-9afb-47eb-b83d-c8ef8f06e240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cut['trip_direction'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d728562-e057-4993-8a6e-7a8d58974123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trip_direction,df_ in df_cut.groupby(by='trip_direction'):\n",
+    "    fig = px.scatter(df_, x='start_time',y='P_rest', color='ship', width=1000, height=600, \n",
+    "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    fig = px.scatter(df_, x='start_time',y='w', color='ship', width=1000, height=600, \n",
+    "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d537f4b-aff9-4c0e-ae02-9115eaf4edce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trip_direction,df_ in df_cut.groupby(by='trip_direction'):\n",
+    "    fig = px.scatter_3d(df_, x='start_time', y='w', z='P_rest', color='ship',\n",
+    "                  opacity=0.5,\n",
+    "                        width=1000,\n",
+    "                        height=800, title=trip_direction\n",
+    "        )\n",
+    "    \n",
+    "    fig.update_traces(marker=dict(size=2,\n",
+    "                             ))\n",
+    "    \n",
+    "    fig.show()"
+   ]
   }
  ],
  "metadata": {
