Added train/test and model fit.

--- a/notebooks/03.01_compare_ships.ipynb
+++ b/notebooks/03.01_compare_ships.ipynb
@@ -313,6 +313,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a469498-87d7-46e0-9c33-097dc8efcbc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = ships.apply(fit_sog3)\n",
+    "models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "57301035-20cd-4ddf-92e4-180bb4aceb93",
    "metadata": {},
    "outputs": [],
@@ -325,17 +336,6 @@
     "    P_pred = P_pred.append(model.predict(ship[['sog']]**3))\n",
     "\n",
     "df_cut['P_pred'] = P_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a469498-87d7-46e0-9c33-097dc8efcbc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = ships.apply(fit_sog3)\n",
-    "models"
    ]
   },
   {
@@ -385,6 +385,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ede2296f-5ab2-4784-8508-8af62cac6b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip_direction='Helsingborg-Helsingør'\n",
+    "df_ = df_cut.groupby(by='trip_direction').get_group(trip_direction)\n",
+    "\n",
+    "fig = px.scatter(df_, x='start_time',y='P_rest', color='ship', width=1000, height=600, \n",
+    "            color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "fig.show()\n",
+    "\n",
+    "fig = px.scatter(df_, x='start_time',y='w', color='ship', width=1000, height=600, \n",
+    "            color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "fig.show()\n",
+    "\n",
+    "fig = px.scatter(df_, x='start_time',y='aw', color='ship', width=1000, height=600, \n",
+    "            color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "fig.show()\n",
+    "\n",
+    "fig = px.scatter(df_, x='start_time',y='aw_x', color='ship', width=1000, height=600, \n",
+    "            color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "fig.show()\n",
+    "\n",
+    "fig = px.scatter(df_, x='start_time',y='aw_y', color='ship', width=1000, height=600, \n",
+    "            color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d728562-e057-4993-8a6e-7a8d58974123",
    "metadata": {},
    "outputs": [],
@@ -395,6 +426,10 @@
     "    fig.show()\n",
     "    \n",
     "    fig = px.scatter(df_, x='start_time',y='w', color='ship', width=1000, height=600, \n",
+    "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    fig = px.scatter(df_, x='start_time',y='aw_x', color='ship', width=1000, height=600, \n",
     "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'], title=trip_direction)\n",
     "    fig.show()"
    ]
@@ -418,6 +453,30 @@
     "    \n",
     "    fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ebe5538-068a-42fc-b895-4cf38290acee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd244a97-d297-4426-97d5-b88809e85f99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f847a490-e109-494f-8e13-d120eaee72b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
