--- a/notebooks/04.01_one_trip.ipynb
+++ b/notebooks/04.01_one_trip.ipynb
@@ -188,7 +188,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.line(data_frame=trip, y=['wa','awa','heading'], width=900, height=300,)"
+    "df_ = trip.copy()\n",
+    "df_['alpha'] = alpha = np.deg2rad(df_['wa'] - df_['heading'])  # True pointing angle relative to wind\n",
+    "W = df_['w']\n",
+    "V = df_['sog']\n",
+    "df_['aw_'] = A = np.sqrt(W**2 + V**2 + 2*W*V*np.cos(alpha))\n",
+    "df_['beta'] = np.arccos((W*np.cos(alpha) + V)/A)\n",
+    "df_['beta_deg'] = np.rad2deg(df_['beta'])\n",
+    "\n",
+    "px.line(data_frame=df_.iloc[0:-1000], y=['awa','beta_deg'], width=900, height=300,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b6b090c-cd32-403b-9f90-8daaa82649c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(data_frame=df_.iloc[0:-1000], y=['aw','aw_'], width=900, height=300,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28918b60-3b67-472d-a4c2-2d135189b05f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(data_frame=df_, y=['wa','awa','heading'], width=900, height=300,)"
    ]
   },
   {
@@ -205,6 +233,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d42506f5-e22e-40fa-a427-4ed19d1f01c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line(data_frame=trip, y=['heading','cog'], width=900, height=300,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f063d04c-f5cf-4e6e-b7ec-622bc22cf68c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c5ebe5-a742-4b96-af37-2bc70eeac3a2",
    "metadata": {},
    "outputs": [],
    "source": []
