Major changes in the pipeline to get mlflow going.

--- a/notebooks/03.01_compare_ships.ipynb
+++ b/notebooks/03.01_compare_ships.ipynb
@@ -228,6 +228,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24288a77-f8de-4ae7-bee6-8d43b5b4bcc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.line(df_cut, x='start_time',y='w', color='ship', width=1000, height=600, \n",
+    "                color_discrete_sequence=['red','green'], hover_data=['trip_no','trip_time'])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "97c7377b-3bc9-4886-beaa-0281a155176c",
    "metadata": {
     "papermill": {
@@ -262,6 +274,62 @@
    "outputs": [],
    "source": [
     "df_aurora.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dcd9a78-c908-47fd-bfa2-c9d7f1bd459d",
+   "metadata": {},
+   "source": [
+    "## Following trips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb1722c-1df5-459d-844b-281edaa343ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trip_direction, df_aurora_ in df_aurora.groupby(by='trip_direction'):\n",
+    "    df_tycho_ = df_tycho.groupby(by='trip_direction').get_group(trip_direction)\n",
+    "    \n",
+    "    close_indexes = df_aurora_['start_time'].apply(lambda x: ((x-df_tycho_['start_time']).abs()).idxmin())\n",
+    "    \n",
+    "    df = pd.DataFrame()\n",
+    "    df['P_aurora'] = df_aurora_['P']\n",
+    "    df['P_tycho'] = df_tycho_.loc[close_indexes]['P'].values\n",
+    "    \n",
+    "    df['P_min'] = df[['P_aurora','P_tycho']].min(axis=1)\n",
+    "    df['P_max'] = df[['P_aurora','P_tycho']].max(axis=1)\n",
+    "    df['P_tot'] = df[['P_aurora','P_tycho']].sum(axis=1)\n",
+    "\n",
+    "    energy_saving = (df['P_max'] - df['P_min']).sum() / df['P_tot'].sum()\n",
+    "    \n",
+    "    fig = px.scatter(df, x='P_aurora',y='P_tycho', width=1000, height=600, \n",
+    "                     opacity=0.3, title=f'{trip_direction} energy saving: {np.round(energy_saving*100)}%')\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3807d48b-c8dc-47eb-9743-10bb32479438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for trip_direction, df_aurora_ in df_aurora.groupby(by='trip_direction'):\n",
+    "    df_tycho_ = df_tycho.groupby(by='trip_direction').get_group(trip_direction)\n",
+    "    \n",
+    "    close_indexes = df_aurora_['start_time'].apply(lambda x: ((x-df_tycho_['start_time']).abs()).idxmin())\n",
+    "    \n",
+    "    df = pd.DataFrame()\n",
+    "    df['w_aurora'] = df_aurora_['w']\n",
+    "    df['w_tycho'] = df_tycho_.loc[close_indexes]['w'].values\n",
+    "   \n",
+    "    fig = px.scatter(df, x='w_aurora',y='w_tycho', width=1000, height=600, \n",
+    "                     opacity=0.3, title=f'{trip_direction}')\n",
+    "    fig.show()"
    ]
   },
   {
@@ -474,6 +542,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f847a490-e109-494f-8e13-d120eaee72b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be98c718-f160-4124-b968-ccdded3b5fdf",
    "metadata": {},
    "outputs": [],
    "source": []
