--- a/notebooks/03.01_compare_ships.ipynb
+++ b/notebooks/03.01_compare_ships.ipynb
@@ -79,8 +79,8 @@
     "for partition_id, loader in loaded.items():\n",
     "    df_ = loader()\n",
     "    df_['partition_id'] = partition_id\n",
-    "    df_['start_time'] = pd.to_datetime(df_['start_time'])\n",
-    "    df_['end_time'] = pd.to_datetime(df_['end_time'])\n",
+    "    df_['start_time'] = pd.to_datetime(df_['start_time'], utc=True)\n",
+    "    df_['end_time'] = pd.to_datetime(df_['end_time'], utc=True)\n",
     "    \n",
     "    df = df.append(df_, ignore_index=True)\n",
     "\n",
@@ -296,19 +296,37 @@
     "    \n",
     "    close_indexes = df_aurora_['start_time'].apply(lambda x: ((x-df_tycho_['start_time']).abs()).idxmin())\n",
     "    \n",
-    "    df = pd.DataFrame()\n",
-    "    df['P_aurora'] = df_aurora_['P']\n",
-    "    df['P_tycho'] = df_tycho_.loc[close_indexes]['P'].values\n",
+    "    #df['P_aurora'] = df_aurora_['P']\n",
+    "    #df['P_tycho'] = df_tycho_.loc[close_indexes]['P'].values\n",
+    "    \n",
+    "    df_aurora_.reset_index(inplace=True)\n",
+    "    df_tycho_ = df_tycho_.loc[close_indexes].reset_index()\n",
+    "    \n",
+    "    df = pd.merge(df_aurora_, df_tycho_, how='inner', left_index=True, right_index=True, suffixes = ('_aurora', '_tycho'))\n",
+    "    \n",
     "    \n",
     "    df['P_min'] = df[['P_aurora','P_tycho']].min(axis=1)\n",
     "    df['P_max'] = df[['P_aurora','P_tycho']].max(axis=1)\n",
     "    df['P_tot'] = df[['P_aurora','P_tycho']].sum(axis=1)\n",
-    "\n",
+    "    \n",
+    "    df['P_aurora - P_tycho'] = df['P_aurora'] - df['P_tycho']\n",
+    "    df['sog_aurora - sog_tycho'] = df['sog_aurora'] - df['sog_tycho']\n",
+    "    \n",
     "    energy_saving = (df['P_max'] - df['P_min']).sum() / df['P_tot'].sum()\n",
     "    \n",
     "    fig = px.scatter(df, x='P_aurora',y='P_tycho', width=1000, height=600, \n",
-    "                     opacity=0.3, title=f'{trip_direction} energy saving: {np.round(energy_saving*100)}%')\n",
-    "    fig.show()"
+    "                     opacity=0.3, \n",
+    "                     hover_data=['P_aurora','P_tycho','sog_aurora', 'sog_tycho'],\n",
+    "                     title=f'{trip_direction} energy saving: {np.round(energy_saving*100)}%')\n",
+    "    fig.show()\n",
+    "    \n",
+    "    \n",
+    "    fig = px.scatter(df, x='sog_aurora - sog_tycho',y='P_aurora - P_tycho', width=1000, height=600, \n",
+    "                     opacity=0.3, \n",
+    "                     hover_data=['P_aurora','P_tycho','sog_aurora', 'sog_tycho'],\n",
+    "                     title=f'{trip_direction} energy saving: {np.round(energy_saving*100)}%')\n",
+    "    fig.show()\n",
+    "    "
    ]
   },
   {
@@ -321,15 +339,21 @@
     "for trip_direction, df_aurora_ in df_aurora.groupby(by='trip_direction'):\n",
     "    df_tycho_ = df_tycho.groupby(by='trip_direction').get_group(trip_direction)\n",
     "    \n",
-    "    close_indexes = df_aurora_['start_time'].apply(lambda x: ((x-df_tycho_['start_time']).abs()).idxmin())\n",
-    "    \n",
     "    df = pd.DataFrame()\n",
     "    df['w_aurora'] = df_aurora_['w']\n",
+    "    df['start_aurora'] = df_aurora_['start_time']\n",
+    "    close_indexes = df_aurora_['start_time'].apply(lambda x: ((x-df_tycho_['start_time']).abs()).idxmin())\n",
     "    df['w_tycho'] = df_tycho_.loc[close_indexes]['w'].values\n",
-    "   \n",
+    "    df['start_tycho'] = df_tycho_.loc[close_indexes]['start_time'].values\n",
+    "\n",
     "    fig = px.scatter(df, x='w_aurora',y='w_tycho', width=1000, height=600, \n",
     "                     opacity=0.3, title=f'{trip_direction}')\n",
-    "    fig.show()"
+    "            \n",
+    "    fig.show()\n",
+    "    \n",
+    "    #fig = px.scatter(df, x='start_aurora',y='start_tycho', width=1000, height=600, \n",
+    "    #                 opacity=0.3, title=f'{trip_direction}')\n",
+    "    #fig.show()"
    ]
   },
   {
