Major change! Tycho and Aurora is now run in separate (copied) pipelines with different name spaces (tycho.) (aurora.). This means that the PartitionedDataSet is no longer needed.

--- a/notebooks/03.01_compare_ships.ipynb
+++ b/notebooks/03.01_compare_ships.ipynb
@@ -74,11 +74,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded = catalog.load('trip_statistics_joined_thrusters')\n",
+    "#loaded = catalog.load('trip_statistics_joined_thrusters')\n",
+    "#df = pd.DataFrame()\n",
+    "#for partition_id, loader in loaded.items():\n",
+    "#    df_ = loader()\n",
+    "#    df_['partition_id'] = partition_id\n",
+    "#    df_['start_time'] = pd.to_datetime(df_['start_time'], utc=True)\n",
+    "#    df_['end_time'] = pd.to_datetime(df_['end_time'], utc=True)\n",
+    "#    \n",
+    "#    df = df.append(df_, ignore_index=True)\n",
+    "#\n",
+    "#df.sort_values(by='start_time', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f472ab-f982-41fd-92e6-0b03a6c2e34a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ship_names = ['tycho','aurora']\n",
+    "\n",
     "df = pd.DataFrame()\n",
-    "for partition_id, loader in loaded.items():\n",
-    "    df_ = loader()\n",
-    "    df_['partition_id'] = partition_id\n",
+    "for ship_name in ship_names:\n",
+    "    df_ = catalog.load(f'{ship_name}.trip_statistics_joined_thrusters')\n",
+    "    df_['ship'] = ship_name\n",
     "    df_['start_time'] = pd.to_datetime(df_['start_time'], utc=True)\n",
     "    df_['end_time'] = pd.to_datetime(df_['end_time'], utc=True)\n",
     "    \n",
@@ -104,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['partition_id'].unique()"
+    "df['ship'].unique()"
    ]
   },
   {
@@ -114,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ship'] = df['partition_id'].apply(lambda x:re.search(r'([^-]+)',x).groups(1)[0])"
+    "#df['ship'] = df['partition_id'].apply(lambda x:re.search(r'([^-]+)',x).groups(1)[0])"
    ]
   },
   {
