--- a/notebooks/06.01_evaluate_model.ipynb
+++ b/notebooks/06.01_evaluate_model.ipynb
@@ -76,14 +76,15 @@
    "source": [
     "df = pd.DataFrame()\n",
     "\n",
-    "true = catalog.load('trip_statistics_joined_thrusters_test')\n",
-    "loaded = catalog.load('trip_statistics_joined_thrusters_linear_regression_prediction')\n",
+    "ship_names = ['tycho','aurora']\n",
     "\n",
-    "for partition_id, loader in loaded.items():\n",
-    "    df_ = loader()\n",
+    "df = pd.DataFrame()\n",
+    "for ship_name in ship_names:\n",
+    "\n",
+    "    df_ = catalog.load(f'{ship_name}.trip_statistics_joined_thrusters_linear_regression_prediction')\n",
     "    \n",
-    "    df_true = true[partition_id]()\n",
-    "    df_true['partition_id'] = partition_id\n",
+    "    df_true = catalog.load(f'{ship_name}.trip_statistics_joined_thrusters_test')\n",
+    "    df_true['ship'] = ship_name\n",
     "    df_true['start_time'] = pd.to_datetime(df_true['start_time'])\n",
     "    df_true['end_time'] = pd.to_datetime(df_true['end_time'])\n",
     "    \n",
@@ -119,16 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560e59d3-6a86-4c5d-b423-cb3a750dd032",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['ship'] = df['partition_id'].apply(lambda x:re.search(r'([^-]+)',x).groups(1)[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d8635372-efbf-4573-84b4-2c4bac1a581e",
    "metadata": {},
    "outputs": [],
@@ -144,7 +135,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d863849-f37d-4cea-88b2-086349c4bf48",
+   "id": "f5252530-9cab-49a8-86eb-87de998b8bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029dedc9-6c7a-457f-8163-6dfff8b10b50",
    "metadata": {},
    "outputs": [],
    "source": []
