Safe commit. (Before switching to E instead of P)

--- a/notebooks/07.01_uraniborg.ipynb
+++ b/notebooks/07.01_uraniborg.ipynb
@@ -55,6 +55,16 @@
    "id": "8aecc0ef-afcb-4325-a5cb-224eb1f2c57a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "list(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dba8dba8-116d-46cb-b509-211a68aec2fa",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
