Updated the report with E instead of P.

--- a/docs/energy_saving_potential/following_trips.ipynb
+++ b/docs/energy_saving_potential/following_trips.ipynb
@@ -97,7 +97,9 @@
     "    \n",
     "    df = df.append(df_, ignore_index=True)\n",
     "\n",
-    "df.sort_values(by='start_time', inplace=True)"
+    "df.sort_values(by='start_time', inplace=True)\n",
+    "\n",
+    "df['E']/=(10**6) # --> [MNm]"
    ]
   },
   {
@@ -128,7 +130,9 @@
    },
    "outputs": [],
    "source": [
-    "facegrid = sns.relplot(data=df, x='start_time',y='P', hue='ship', height=3, aspect=3);\n",
+    "facegrid = sns.relplot(data=df, x='start_time',y='E', hue='ship', height=3, aspect=3);\n",
+    "facegrid.set_ylabels('E (Energy consumption per trip) [MNm]')\n",
+    "\n",
     "glue('fig:tycho-aurora', facegrid.fig, display=False)"
    ]
   },
@@ -137,7 +141,7 @@
    "id": "761d9b9a-0c07-4eb0-9c5e-ded2999a31e1",
    "metadata": {},
    "source": [
-    "{numref}`fig:tycho-aurora` shows the mean power for all trips made by the two ships between {glue:}`start` and {glue:}`end`. The trips are filtered to contain only trips where there exist one trip with Aurora and one trip with Tycho Brahe within the time window of 1 hour as shown in {numref}`fig:tycho-aurora-cut`. It can be seen that there is a period in the begining of May (where Tycho Brahe was taken out of service.) that has been excluded. \n",
+    "{numref}`fig:tycho-aurora` shows the energy consumption for trips with the two ships between {glue:}`start` and {glue:}`end`. The trips are filtered to contain only trips where there exist one trip with Aurora and one trip with Tycho Brahe within the time window of 1 hour as shown in {numref}`fig:tycho-aurora-cut`. It can be seen that there is a period in the begining of May (where Tycho Brahe was taken out of service.) that has been excluded. \n",
     "\n",
     "```{glue:figure} fig:tycho-aurora\n",
     ":figwidth: 800px\n",
@@ -184,7 +188,8 @@
    },
    "outputs": [],
    "source": [
-    "facegrid = sns.relplot(data=df_cut, x='start_time',y='P', hue='ship', height=3, aspect=3);\n",
+    "facegrid = sns.relplot(data=df_cut, x='start_time',y='E', hue='ship', height=3, aspect=3);\n",
+    "facegrid.set_ylabels(\"E (Energy consumption) [MNm]\", clear_inner=False)\n",
     "glue('fig:tycho-aurora-cut', facegrid.fig, display=False)"
    ]
   },
@@ -205,6 +210,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fdf8e6b0-8f71-4a3a-886c-6c630409ec11",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "sns.displot(df_cut, x='E', hue='ship', kind=\"kde\", bw_adjust=1, height=3, aspect=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "242195e8-f6e0-489d-82f2-d132afb2c80c",
    "metadata": {
     "tags": [
@@ -213,7 +232,7 @@
    },
    "outputs": [],
    "source": [
-    "table_tycho = df_tycho[['sog','P']].describe()\n",
+    "table_tycho = df_tycho[['sog','E']].describe()\n",
     "table_tycho.rename(\n",
     "    columns={'sog':'sog [m/s]',\n",
     "            'P':'P [kW]',}, inplace=True)\n",
@@ -236,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "table_aurora = df_aurora[['sog','P']].describe()\n",
+    "table_aurora = df_aurora[['sog','E']].describe()\n",
     "table_aurora.rename(\n",
     "    columns={'sog':'sog [m/s]',\n",
     "            'P':'P [kW]',}, inplace=True)\n",
@@ -255,8 +274,8 @@
    },
    "outputs": [],
    "source": [
-    "P_pct_diff = int(np.round((df_tycho['P'].mean() - df_aurora['P'].mean()) / df_aurora['P'].mean()*100))\n",
-    "glue('P_pct_diff', P_pct_diff)"
+    "P_pct_diff = int(np.round((df_tycho['E'].mean() - df_aurora['E'].mean()) / df_aurora['E'].mean()*100))\n",
+    "glue('E_pct_diff', P_pct_diff)"
    ]
   },
   {
@@ -264,7 +283,7 @@
    "id": "a4440db8-5395-41a5-a468-16b87be29e0f",
    "metadata": {},
    "source": [
-    "The statistics in {numref}`tab:tycho` and {numref}`tab:aurora` show that the mean power for all trips is very similar for the two ships. The mean power only differs {glue:}`P_pct_diff`%. The sister ships should therefore have similar possibilites to minimize the energy consumption. Two following trips: one with Aurora and one with Tycho Brahe in the same direction and closest in time can be paired. These pairs can be compared, and since the time window is now very small (less than 1 hour), the difference in energy consumption should come from the operation of the ships. To further contrain the pairs, only pairs where the mean wind speed recorded onboard the ships differs less than {glue:}`w_max_diff` m/s between the ships is included in the anlysis.\n",
+    "The statistics in {numref}`tab:tycho` and {numref}`tab:aurora` show that the energy consumption is very similar for the two ships. The mean energy consumption only differs {glue:}`E_pct_diff`%. The sister ships should therefore have similar possibilites to minimize the energy consumption. Two following trips: one with Aurora and one with Tycho Brahe in the same direction and closest in time can be paired. These pairs can be compared, and since the time window is now very small (less than 1 hour), the difference in energy consumption should come from the operation of the ships. To further contrain the pairs, only pairs where the mean wind speed recorded onboard the ships differs less than {glue:}`w_max_diff` m/s between the ships is included in the anlysis.\n",
     "\n",
     "```{glue:figure} tab:tycho\n",
     ":name: \"tab:tycho\"\n",
@@ -301,16 +320,16 @@
     "    df = pd.merge(df_aurora_, df_tycho_, how='inner', left_index=True, right_index=True, \n",
     "                  suffixes = ('_aurora', '_tycho'))\n",
     "    df['trip_direction'] = trip_direction    \n",
-    "    df['P_min'] = df[['P_aurora','P_tycho']].min(axis=1)\n",
-    "    df['P_max'] = df[['P_aurora','P_tycho']].max(axis=1)\n",
-    "    df['P_tot'] = df[['P_aurora','P_tycho']].sum(axis=1)\n",
+    "    df['E_min'] = df[['E_aurora','E_tycho']].min(axis=1)\n",
+    "    df['E_max'] = df[['E_aurora','E_tycho']].max(axis=1)\n",
+    "    df['E_tot'] = df[['E_aurora','E_tycho']].sum(axis=1)\n",
     "    df['w_diff'] = (df['w_aurora'] - df['w_tycho']).abs()\n",
     "    df['time_diff'] = (df['start_time_aurora'] - df['start_time_tycho']).abs()\n",
     "    \n",
-    "    df['P_aurora - P_tycho'] = df['P_aurora'] - df['P_tycho']\n",
+    "    df['E_aurora - E_tycho'] = df['E_aurora'] - df['E_tycho']\n",
     "    df['sog_aurora - sog_tycho'] = df['sog_aurora'] - df['sog_tycho']\n",
     "    \n",
-    "    df['energy_saving'] = (df['P_max'] - df['P_min'])\n",
+    "    df['energy_saving'] = (df['E_max'] - df['E_min'])\n",
     "    \n",
     "    df_following = df_following.append(df)\n",
     "    "
@@ -336,10 +355,10 @@
     "\n",
     "df_following = df_following.loc[mask]\n",
     "for trip_direction, df in df_following.groupby('trip_direction'):\n",
-    "    facegrid = sns.relplot(data=df, x='P_aurora',y='P_tycho', height=3, aspect=3);\n",
-    "    glue(f'fig:P_following_{trip_direction}', facegrid.fig, display=False)\n",
+    "    facegrid = sns.relplot(data=df, x='E_aurora',y='E_tycho', height=3, aspect=3);\n",
+    "    glue(f'fig:E_following_{trip_direction}', facegrid.fig, display=False)\n",
     "\n",
-    "    facegrid = sns.relplot(data=df, x='sog_aurora - sog_tycho',y='P_aurora - P_tycho', height=3, aspect=3);\n",
+    "    facegrid = sns.relplot(data=df, x='sog_aurora - sog_tycho',y='E_aurora - E_tycho', height=3, aspect=3);\n",
     "    glue(f'fig:sog_following_{trip_direction}', facegrid.fig, display=False)  \n",
     "    \n",
     "    facegrid = sns.relplot(data=df, x='w_aurora',y='w_tycho', height=3, aspect=3);\n",
@@ -351,7 +370,7 @@
    "id": "9d9b64a8-7c01-44ed-9b61-a3bf32fe849d",
    "metadata": {},
    "source": [
-    "The mean power of the following trip paris is shown in {numref}`fig:P_following_Helsingborg-Helsingør` and {numref}`fig:P_following_Helsingør-Helsingborg` for the two directions. The mean power of Aurora (x-axis) is plotted against Tycho Brahe (y-axis). It is very clear that the mean power differs a lot between the ships for trips that are very close in time, where the environment etc. should be very similar. "
+    "The mean power of the following trip paris is shown in {numref}`fig:E_following_Helsingborg-Helsingør` and {numref}`fig:E_following_Helsingør-Helsingborg` for the two directions. The mean power of Aurora (x-axis) is plotted against Tycho Brahe (y-axis). It is very clear that the mean power differs a lot between the ships for trips that are very close in time, where the environment etc. should be very similar. "
    ]
   },
   {
@@ -365,8 +384,8 @@
    },
    "outputs": [],
    "source": [
-    "df_energy_saving = df_following.groupby(by='trip_direction')[['energy_saving','P_tot']].sum()\n",
-    "df_energy_saving['energy_saving_pct'] = df_energy_saving['energy_saving']/df_energy_saving['P_tot']*100\n",
+    "df_energy_saving = df_following.groupby(by='trip_direction')[['energy_saving','E_tot']].sum()\n",
+    "df_energy_saving['energy_saving_pct'] = df_energy_saving['energy_saving']/df_energy_saving['E_tot']*100\n",
     "\n",
     "df_table = df_energy_saving[['energy_saving_pct']].copy()\n",
     "\n",
@@ -385,17 +404,17 @@
    "id": "6c1efe84-7a4a-4be4-bc25-aa4563cf1181",
    "metadata": {},
    "source": [
-    "```{glue:figure} fig:P_following_Helsingborg-Helsingør\n",
+    "```{glue:figure} fig:E_following_Helsingborg-Helsingør\n",
     ":figwidth: 800px\n",
-    ":name: \"fig:P_following_Helsingborg-Helsingør\"\n",
+    ":name: \"fig:E_following_Helsingborg-Helsingør\"\n",
     "\n",
     "Comparison of mean power between the two ships for trips (Helsingborg-Helsingør) that are closest in time (1 hour maximum).\n",
     "\n",
     "```\n",
     "\n",
-    "```{glue:figure} fig:P_following_Helsingør-Helsingborg\n",
+    "```{glue:figure} fig:E_following_Helsingør-Helsingborg\n",
     ":figwidth: 800px\n",
-    ":name: \"fig:P_following_Helsingør-Helsingborg\"\n",
+    ":name: \"fig:E_following_Helsingør-Helsingborg\"\n",
     "\n",
     "Comparison of mean power between the two ships for trips (Helsingør-Helsingborg) that are closest in time (1 hour maximum).\n",
     "\n",
@@ -438,13 +457,21 @@
    "id": "51706a93-f5d2-48bf-bc7d-e5460875af24",
    "metadata": {},
    "source": [
-    "Analysing the difference between pair trips between Aurora and Tycho Brahe estimates that there is an energy saving potential of at least 10%. "
+    "Analysing the difference between pair trips between Aurora and Tycho Brahe estimates that there is an energy saving potential of at least 7%. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fd0b3741-2758-4634-ab0e-017b17344c03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51f9168e-f5ca-4121-97cf-8a8ed01daf03",
    "metadata": {},
    "outputs": [],
    "source": []
