--- a/notebooks/02.2_clean_trip_statistics.ipynb
+++ b/notebooks/02.2_clean_trip_statistics.ipynb
@@ -134,7 +134,7 @@
    },
    "outputs": [],
    "source": [
-    "df_stat = catalog.load('trip_statistics')\n",
+    "df_stat = catalog.load('tycho.trip_statistics')\n",
     "df_stat.describe()"
    ]
   },
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.displot(df_compare, x='P', hue='item', binwidth=25, aspect=3)"
+    "sns.displot(df_compare, x='E', hue='item', binwidth=5*10**4, aspect=3)"
    ]
   },
   {
@@ -260,39 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb87277-e981-4cac-bfc0-c0ce4cd4684e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b96e3e1-f445-4d61-bf10-d88a0522fabd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f6a05f3-d434-4761-8450-5c6000f40bfb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24f11a60-5ff9-4a6a-a01b-197481ebe4f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "167b556e-62a5-4c80-8743-d19caa89774a",
+   "id": "8a0b6c45-bcab-4c76-b835-efb7f620417d",
    "metadata": {},
    "outputs": [],
    "source": []
